Made numerous small changes to improve usability on mobile device browsers: - Added viewport declarations for native-size rendering. - Added translucent background color for login screen to improve appearance in portrait orientation. - Added JavaScript code to auto-detect mobile sizes and enable "optimize for mobile" by default. - Fixed XHTML syntax for optimize-mobile checkbox attribute. - Added minimum width rule for messages pane.

--- a/web/mamirc.css
+++ b/web/mamirc.css
@@ -67,6 +67,7 @@ header {
 }
 
 #messages {
+	min-width: 20em;
 	flex-grow: 1;
 	flex-shrink: 1;
 	display: flex;
